# Triad

./: .env.example  .gitignore  LICENSE  README.md  chainlit.md  list_groq_models.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: ar-SA.json  bn.json  da-DK.json  de-DE.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  it.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl.json  pt-PT.json  ta.json  te.json  zh-CN.json  zh-TW.json
app/: main.py
app/client/: groq_client.py  supadata_client.py
app/services/: chunking.py  claim_extractor.py  council.py  scoring.py  transcript.py  validator.py
public/: branding.js  custom.css
