[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triad"
version = "0.1.0"
description = "Evidence-grounded claim verification for YouTube transcripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "supadata>=1.6.0",
]